gicocrt: arcv: Enable caches on startup
To get the best runtime performance it is necessary to enable
instruction and data caches, can be disabled out of reset
(for the instruction cache it is a configurable behavior,
data caches though are always disabled by default according
to the ARC-V processors specification).

Note that to enable ARC-V features it's necessary to build GCC
multilib configurations with zicsr extension.

Signed-off-by: Yuriy Kolerov <ykolerov@synopsys.com>

--- a/picocrt/meson.build
+++ b/picocrt/meson.build
@@ -96,6 +96,12 @@ picocrt_variants = [
     'c_args': [],
     'src': src_picocrt_none,
   },
+  {
+    'name': 'arcv',
+    'suffix': '-arcv',
+    'c_args': ['-DCRT0_EXIT', '-DCRT0_SEMIHOST', '-DCRT0_ARCV'],
+    'src': src_picocrt,
+  },
 ]
 
 if has_semihost
