test: Add RISC-V testsuite and initial tests for FPU and V extension
Signed-off-by: Yuriy Kolerov <ykolerov@synopsys.com>

--- a/test/meson.build
+++ b/test/meson.build
@@ -739,3 +739,7 @@ subdir('libc-testsuite')
 if has_arm_semihost
   subdir('semihost')
 endif
+
+if host_cpu_family == 'riscv'
+  subdir('riscv')
+endif
