test: Increase timeout for intensive tests
Signed-off-by: Yuriy Kolerov <ykolerov@synopsys.com>

--- a/newlib/testsuite/newlib.string/meson.build
+++ b/newlib/testsuite/newlib.string/meson.build
@@ -71,6 +71,7 @@ foreach params : targets
 		    link_depends: _link_depends,
 		    include_directories: test_inc),
          depends: bios_bin,
+         timeout: 360,
 	 suite: 'newlib.string', env: test_env)
   endforeach
 endforeach
