--- a/meson.build
+++ b/meson.build
@@ -1512,7 +1512,11 @@ has_semihost = false
 # arm compatible semihosting, enough to run arm semihost tests
 has_arm_semihost = false
 
-crt0_test = 'crt0_hosted'
+if test_machine == 'nsim'
+  crt0_test = 'crt0_arcv_hosted'
+else
+  crt0_test = 'crt0_hosted'
+endif
 
 # some semihost needs bios to run the tests with qemu
 bios_bin = []
