picocrt/arcv: Add semihost-trap and arcv-semihost-trap for crt0
It would be useful to split crt0 for semihost into 2 different
configurations:

1. crt0-semihost and crt0-arcv-semihost - processes command
   line only.
2. crt0-semihost-trap and crt0-arcv-semihost-trap - also
   sets a trap for RISC-V exceptions.

Thus we can avoid using traps if we don't need them and parse
a command line without using Zicsr instructions in crt0-semihost.

Signed-off-by: Yuriy Kolerov <ykolerov@synopsys.com>

--- a/picocrt/meson.build
+++ b/picocrt/meson.build
@@ -125,12 +125,20 @@ picocrt_variants += [
 ]
 
 if has_semihost
-  picocrt_variants += {
-                       'name': 'semihost',
-                       'suffix': '-semihost',
-                       'c_args':  ['-DCRT0_EXIT', '-DCRT0_SEMIHOST'],
-                       'src': src_picocrt,
-                     }
+  picocrt_variants = [
+    {
+      'name': 'semihost',
+      'suffix': '-semihost',
+      'c_args':  ['-DCRT0_EXIT', '-DCRT0_SEMIHOST'],
+      'src': src_picocrt,
+    },
+    {
+      'name': 'semihost-trap',
+      'suffix': '-semihost-trap',
+      'c_args':  ['-DCRT0_EXIT', '-DCRT0_SEMIHOST', '-DCRT0_SEMIHOST_TRAP'],
+      'src': src_picocrt,
+    },
+  ]
 
   # crt0 variants for ARC-V targets with semihosting
   picocrt_variants += [
@@ -140,12 +148,18 @@ if has_semihost
       'c_args': ['-DCRT0_ARCV', '-DCRT0_EXIT', '-DCRT0_SEMIHOST'],
       'src': src_picocrt,
     },
+    {
+      'name': 'arcv-semihost-trap',
+      'suffix': '-arcv-semihost-trap',
+      'c_args':  ['-DCRT0_ARCV', '-DCRT0_EXIT', '-DCRT0_SEMIHOST', '-DCRT0_SEMIHOST_TRAP'],
+      'src': src_picocrt,
+    },
   ]
 
   if test_machine == 'nsim'
-    crt0_test = 'crt0_arcv_semihost'
+    crt0_test = 'crt0_arcv_semihost_trap'
   else
-    crt0_test = 'crt0_semihost'
+    crt0_test = 'crt0_semihost_trap'
   endif
 endif
 
