fixup! picocrt/arcv: Add semihost-trap and arcv-semihost-trap for crt0
Signed-off-by: Yuriy Kolerov <ykolerov@synopsys.com>

--- a/picocrt/meson.build
+++ b/picocrt/meson.build
@@ -125,7 +125,7 @@ picocrt_variants += [
 ]
 
 if has_semihost
-  picocrt_variants = [
+  picocrt_variants += [
     {
       'name': 'semihost',
       'suffix': '-semihost',
