fixup! picolibc.ld.in: Use READONLY flag for C++ exception sections
Signed-off-by: Yuriy Kolerov <ykolerov@synopsys.com>

--- a/picolibc.ld.in
+++ b/picolibc.ld.in
@@ -144,7 +144,7 @@ SECTIONS
 	 * so that the linker will compute the offsets to those
 	 * entries correctly.
 	 */
-	.got : {
+	.got (READONLY) : {
 		*(.got.plt)
 		*(.got)
 	} >flash AT>flash :text
